--- a/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
+++ b/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
@@ -15,9 +15,11 @@
             android:name=".AnimationActivity"
             android:label="@string/title_activity_animation"
             android:theme="@style/AppTheme.NoActionBar">
-
         </activity>
         <activity android:name=".AnimatorActivity">
+
+        </activity>
+        <activity android:name=".MarqueeViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
