--- a/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
+++ b/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.test.viewdemo">
+    package="com.test.viewdemo">
 
     <application
         android:allowBackup="true"
@@ -8,36 +8,27 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-        </activity>
-        <activity android:name=".DialogActivity"/>
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".DialogActivity" />
         <activity
             android:name=".AnimationActivity"
             android:label="@string/title_activity_animation"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".AnimatorActivity">
-
-        </activity>
-        <activity android:name=".MarqueeViewActivity">
-        </activity>
-        <activity android:name=".coordinateDemo.CoordinatorDemoActivity">
-        </activity>
-        <activity android:name=".coordinateDemo.AppBarLayoutActivity">
-
-        </activity>
-        <activity android:name=".coordinateDemo.viewCompatOffsetDemo.ViewCompatDemoActivity">
-
-        </activity>
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".AnimatorActivity"></activity>
+        <activity android:name=".MarqueeViewActivity"></activity>
+        <activity android:name=".coordinateDemo.CoordinatorDemoActivity"></activity>
+        <activity android:name=".coordinateDemo.AppBarLayoutActivity"></activity>
+        <activity android:name=".coordinateDemo.viewCompatOffsetDemo.ViewCompatDemoActivity"></activity>
         <activity android:name=".coordinateDemo.viewCompatOffsetDemo.ViewCompatOffsetHelperDemoActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+        </activity>
+        <activity android:name=".DragViewActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
