--- a/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
+++ b/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
@@ -22,9 +22,11 @@
         <activity android:name=".coordinateDemo.viewCompatOffsetDemo.ViewCompatOffsetHelperDemoActivity">
         </activity>
         <activity android:name=".DragViewActivity">
+        </activity>
+        <activity android:name=".viewPager.PageViewUseActivity">
 
         </activity>
-        <activity android:name=".PageViewUseActivity">
+        <activity android:name=".viewPager.FragmentAdapterUseActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
