--- a/FourComponent/app/src/main/AndroidManifest.xml
+++ b/FourComponent/app/src/main/AndroidManifest.xml
@@ -10,12 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".serviceDemo.IntentServiceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
+        <service
+            android:name="com.example.xuyabo.fourcomponent.DownFileService">
+
+        </service>
     </application>
 
 </manifest>
