--- a/FourComponent/app/src/main/AndroidManifest.xml
+++ b/FourComponent/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
 
         <service
-            android:name="com.example.xuyabo.fourcomponent.DownFileService">
+            android:name="com.example.xuyabo.fourcomponent.serviceDemo.DownFileService">
 
         </service>
     </application>
