一个指示器为圆环的进度条和一个指示器为文字的进度条

--- a/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
+++ b/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
@@ -33,9 +33,11 @@
         <activity
             android:name=".practiceEditText.EditeTextActivity"
             android:windowSoftInputMode="stateVisible">
-
         </activity>
         <activity android:name=".RecyclerViewDemo.RecyclerViewDemoActivity">
+
+        </activity>
+        <activity android:name=".progressBarDemo.SeekBarDemoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
