--- a/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
+++ b/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.test.viewdemo">
+    package="com.test.viewdemo">
 
     <application
         android:allowBackup="true"
@@ -8,40 +8,38 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".DialogActivity"/>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".DialogActivity" />
         <activity
             android:name=".AnimationActivity"
             android:label="@string/title_activity_animation"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".AnimatorActivity"/>
-        <activity android:name=".MarqueeViewActivity"/>
-        <activity android:name=".coordinateDemo.CoordinatorDemoActivity"/>
-        <activity android:name=".coordinateDemo.AppBarLayoutActivity"/>
-        <activity android:name=".coordinateDemo.viewCompatOffsetDemo.ViewCompatDemoActivity">
-        </activity>
-        <activity android:name=".coordinateDemo.viewCompatOffsetDemo.ViewCompatOffsetHelperDemoActivity">
-        </activity>
-        <activity android:name=".DragViewActivity">
-        </activity>
-        <activity android:name=".viewPager.PageViewUseActivity">
-        </activity>
-        <activity android:name=".viewPager.FragmentAdapterUseActivity">
-        </activity>
-        <activity android:name=".ScrollerDemoActivity">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".AnimatorActivity" />
+        <activity android:name=".MarqueeViewActivity" />
+        <activity android:name=".coordinateDemo.CoordinatorDemoActivity" />
+        <activity android:name=".coordinateDemo.AppBarLayoutActivity" />
+        <activity android:name=".coordinateDemo.viewCompatOffsetDemo.ViewCompatDemoActivity"></activity>
+        <activity android:name=".coordinateDemo.viewCompatOffsetDemo.ViewCompatOffsetHelperDemoActivity"></activity>
+        <activity android:name=".DragViewActivity"></activity>
+        <activity android:name=".viewPager.PageViewUseActivity"></activity>
+        <activity android:name=".viewPager.FragmentAdapterUseActivity"></activity>
+        <activity android:name=".ScrollerDemoActivity"></activity>
         <activity
             android:name=".practiceEditText.EditeTextActivity"
-            android:windowSoftInputMode="stateVisible">
-        </activity>
-        <activity android:name=".RecyclerViewDemo.RecyclerViewDemoActivity">
-
-        </activity>
+            android:windowSoftInputMode="stateVisible"></activity>
+        <activity android:name=".RecyclerViewDemo.RecyclerViewDemoActivity"></activity>
         <activity android:name=".progressBarDemo.SeekBarDemoActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+        </activity>
+        <activity android:name=".animationDrawable.AnimationTestOneActivity">
+
+        </activity>
+
+        <activity android:name=".animationDrawable.AnimationTestTwoActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
