--- a/MyApplication/ViewDemo/app/build.gradle
+++ b/MyApplication/ViewDemo/app/build.gradle
@@ -3,7 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
-
+    dataBinding {
+        enabled true
+    }
     defaultConfig {
         applicationId "com.test.viewdemo"
         minSdkVersion 11
