--- a/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
+++ b/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.test.viewdemo">
+    package="com.test.viewdemo">
 
     <application
         android:allowBackup="true"
@@ -8,44 +8,46 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".DialogActivity"/>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".DialogActivity" />
         <activity
             android:name=".viewAnimationDemo.BaseViewAnimationDemoActivity"
             android:label="@string/title_activity_animation"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".AnimatorActivity"/>
-        <activity android:name=".MarqueeViewActivity"/>
-        <activity android:name=".coordinateDemo.CoordinatorDemoActivity"/>
-        <activity android:name=".coordinateDemo.AppBarLayoutActivity"/>
-        <activity android:name=".coordinateDemo.viewCompatOffsetDemo.ViewCompatDemoActivity"/>
-        <activity android:name=".coordinateDemo.viewCompatOffsetDemo.ViewCompatOffsetHelperDemoActivity"/>
-        <activity android:name=".DragViewActivity"/>
-        <activity android:name=".viewPager.PageViewUseActivity"/>
-        <activity android:name=".viewPager.FragmentAdapterUseActivity"/>
-        <activity android:name=".ScrollerDemoActivity"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".AnimatorActivity" />
+        <activity android:name=".MarqueeViewActivity" />
+        <activity android:name=".coordinateDemo.CoordinatorDemoActivity" />
+        <activity android:name=".coordinateDemo.AppBarLayoutActivity" />
+        <activity android:name=".coordinateDemo.viewCompatOffsetDemo.ViewCompatDemoActivity" />
+        <activity android:name=".coordinateDemo.viewCompatOffsetDemo.ViewCompatOffsetHelperDemoActivity" />
+        <activity android:name=".DragViewActivity" />
+        <activity android:name=".viewPager.PageViewUseActivity" >
+
+        </activity>
+        <activity android:name=".viewPager.FragmentAdapterUseActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ScrollerDemoActivity" />
         <activity
             android:name=".practiceEditText.EditeTextActivity"
-            android:windowSoftInputMode="stateVisible"/>
-        <activity android:name=".RecyclerViewDemo.itemDcorarionDemo.RecyclerViewDemoActivity">
-        </activity>
-        <activity android:name=".progressBarDemo.SeekBarDemoActivity">
-        </activity>
-        <activity android:name=".animationDrawable.AnimationTestOneActivity">
-        </activity>
-        <activity android:name=".animationDrawable.AnimationTestTwoActivity">
-        </activity>
-        <activity android:name=".viewAnimationDemo.LayoutAnimationDemoActivity">
-        </activity>
-        <activity android:name=".RecyclerViewDemo.AdapterDemo.DataBindingRecyclerViewActivity">
+            android:windowSoftInputMode="stateVisible" />
+        <activity android:name=".RecyclerViewDemo.itemDcorarionDemo.RecyclerViewDemoActivity" />
+        <activity android:name=".progressBarDemo.SeekBarDemoActivity" />
+        <activity android:name=".animationDrawable.AnimationTestOneActivity" />
+        <activity android:name=".animationDrawable.AnimationTestTwoActivity" />
+        <activity android:name=".viewAnimationDemo.LayoutAnimationDemoActivity" />
+        <activity android:name=".RecyclerViewDemo.AdapterDemo.DataBindingRecyclerViewActivity" />
+        <activity android:name=".TouchEventDemo.EventPassthroughActivity" />
+        <activity android:name=".measureDemo.MeasureDemoActivity"></activity>
+        <activity android:name=".BaseDraw.LineActivity">
 
         </activity>
-        <activity android:name=".TouchEventDemo.EventPassthroughActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+        <activity android:name=".RecyclerViewDemo.scrollDemo.RecyclerViewScrollDemoActivity">
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
     </application>
 
