启动服务和绑定服务

--- a/FourComponent/app/src/main/AndroidManifest.xml
+++ b/FourComponent/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.xuyabo.fourcomponent">
+          package="com.example.xuyabo.fourcomponent">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity"/>
         <activity android:name=".serviceDemo.IntentServiceActivity">
 
             <!--
@@ -21,30 +21,40 @@
             -->
         </activity>
 
-        <service android:name=".serviceDemo.DownFileService" />
+        <service android:name=".serviceDemo.DownFileService"/>
 
         <activity android:name=".activityLaunchModel.FirstActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-        <activity android:name=".activityLaunchModel.StandardFirstActivity"
-            android:taskAffinity="com.example.xuyabo.fourcomponent.singleInstance1"
-
-            />
+        <activity
+            android:name=".activityLaunchModel.StandardFirstActivity"
+            android:taskAffinity="com.example.xuyabo.fourcomponent.singleInstance1"/>
         <activity
             android:name=".activityLaunchModel.StandardSecondActivity"
-            android:taskAffinity="com.example.xuyabo.fourcomponent.sencond" />
+            android:taskAffinity="com.example.xuyabo.fourcomponent.sencond"/>
         <activity
             android:name=".activityLaunchModel.NewTaskActivity"
             android:launchMode="singleTask"
-            android:taskAffinity="com.example.xuyabo.fourcomponent.newTask1" />
+            android:taskAffinity="com.example.xuyabo.fourcomponent.newTask1"/>
         <activity
             android:name=".activityLaunchModel.SingleInstanceActivity"
-            android:taskAffinity="com.example.xuyabo.fourcomponent.singleInstance1"
-            android:launchMode="singleInstance"></activity>
+            android:launchMode="singleInstance"
+            android:taskAffinity="com.example.xuyabo.fourcomponent.singleInstance1"/>
+        <activity android:name=".serveiDemo.ServiceDemoActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
+        <service
+            android:name=".serveiDemo.MyService"
+            android:enabled="true"
+            android:exported="true">
+        </service>
+
+        <activity android:name=".serveiDemo.ServiceDemo2Activity">
+        </activity>
     </application>
 
 </manifest>
