--- a/AndroidPerformance/app/build.gradle
+++ b/AndroidPerformance/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "com.example.xuyabo.androidperformance"
+        applicationId "com.example.xuyabo.androidperformances"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
