--- a/AndroidPerformance/app/src/main/AndroidManifest.xml
+++ b/AndroidPerformance/app/src/main/AndroidManifest.xml
@@ -3,17 +3,23 @@
           package="com.example.xuyabo.androidperformance">
 
     <application
+        android:name=".BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".BaseApplication"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-
         </activity>
         <activity android:name=".smoothDetection.SMTestActivity">
+        </activity>
+        <activity android:name=".smoothDetection.systraceUse.FirstActivity">
+
+        </activity>
+        <activity android:name=".smoothDetection.systraceUse.UseTraceActivity">
+        </activity>
+        <activity android:name=".mesureTimeDemo.MeasureTimeDemoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
