--- a/FourComponent/app/src/main/AndroidManifest.xml
+++ b/FourComponent/app/src/main/AndroidManifest.xml
@@ -40,6 +40,11 @@
             android:launchMode="singleInstance"
             android:taskAffinity="com.example.xuyabo.fourcomponent.singleInstance1"/>
         <activity android:name=".serveiDemo.ServiceDemoActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <service
