drawable.draw(canvase)

--- a/AndroidPerformance/build.gradle
+++ b/AndroidPerformance/build.gradle
@@ -15,7 +15,11 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'http://oss.sonatype.org/content/repositories/snapshots'
+        }
     }
+
 }
 
 task clean(type: Delete) {
