使用运行时注解，完成类似Butterknife的功能

--- a/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
+++ b/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
@@ -67,11 +67,7 @@
             android:name=".animationDemo.MatrixDemoActivity"
             android:label="@string/title_activity_matrix_demo"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
         <activity android:name=".DrawableTestActivity">
         </activity>
@@ -102,6 +98,13 @@
         <activity android:name=".BaseDraw.ScrollDemoActivity">
         </activity>
         <activity android:name=".animationDemo.ScrollToTestActivity">
+        </activity>
+        <activity android:name=".AnnotationDemo.AnnotaionDemoActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
     </application>
 
