BitmapRegionDecode 加载图片的部分区域

--- a/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
+++ b/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
@@ -103,9 +103,11 @@
         <activity android:name=".learnStructure.mvc.MVCDemoActivity">
         </activity>
         <activity android:name=".learnStructure.mvp.MVPDemoActivity">
-
         </activity>
         <activity android:name=".learnStructure.mvvm.MVVMDemoActivity">
+
+        </activity>
+        <activity android:name=".longImageLoad.LongImageLoadActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
