--- a/FourComponent/app/src/main/AndroidManifest.xml
+++ b/FourComponent/app/src/main/AndroidManifest.xml
@@ -40,11 +40,6 @@
             android:launchMode="singleInstance"
             android:taskAffinity="com.example.xuyabo.fourcomponent.singleInstance1"/>
         <activity android:name=".serveiDemo.ServiceDemoActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <service
@@ -56,11 +51,29 @@
         <activity
             android:name=".activityStyle.TranslucentActivity"
             android:theme="@style/Theme.Transparent">
-
         </activity>
         <activity
-            android:theme="@style/AppTheme.Transparent"
-            android:name=".activityStyle.TranslucentAppcompatActivity">
+            android:name=".activityStyle.TranslucentAppcompatActivity"
+            android:theme="@style/AppTheme.Transparent">
+        </activity>
+        <activity android:name=".aidlDemo.BinderDemoActivity">
+
+        </activity>
+
+        <service
+            android:name=".aidlDemo.AddService"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":add">
+        </service>
+        <service
+            android:name=".MessengerDemo.MessengerDemoService"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":messenger">
+        </service>
+
+        <activity android:name=".MessengerDemo.MessengerDemoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
