--- a/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
+++ b/MyApplication/ViewDemo/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.test.viewdemo">
-
+   <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -105,9 +106,11 @@
         <activity android:name=".learnStructure.mvp.MVPDemoActivity">
         </activity>
         <activity android:name=".learnStructure.mvvm.MVVMDemoActivity">
-
         </activity>
         <activity android:name=".longImageLoad.LongImageLoadActivity">
+         
+        </activity>
+        <activity android:name=".runtimePermission.RuntimePermissionDemoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
