--- a/AndroidPerformance/app/build.gradle
+++ b/AndroidPerformance/app/build.gradle
@@ -33,5 +33,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:recyclerview-v7:26+'
     compile 'com.jakewharton:butterknife:7.0.1'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
     testCompile 'junit:junit:4.12'
 }
