--- a/AndroidPerformance/gradle.properties
+++ b/AndroidPerformance/gradle.properties
@@ -12,4 +12,6 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Wed May 02 16:33:33 CST 2018
+#Tue Jul 10 15:02:19 CST 2018
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=1080
