--- a/MyApplication/ViewDemo/app/build.gradle
+++ b/MyApplication/ViewDemo/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     compile 'com.android.support:design:27+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'io.reactivex:rxandroid:1.1.0'
     testCompile 'junit:junit:4.12'
+    compile 'io.reactivex.rxjava2:rxjava:2.x.x'
 
 }
