--- a/MyApplication/ViewDemo/app/build.gradle
+++ b/MyApplication/ViewDemo/app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.1.0'
     testCompile 'junit:junit:4.12'
     compile 'io.reactivex.rxjava2:rxjava:2.x.x'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
+
 
 }
